--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</li>
 
 		<li>
-			<a href="05_prod-item.php" target="_blank">5. Страница продукции</a>
+			<a href="05_gasholders.php" target="_blank">5. Страница продукции</a>
 		</li>
 
 		<li>
@@ -50,11 +50,7 @@
 		</li>
 
 		<li>
-			<a href="08_search.php" target="_blank">8. Результаты поиска</a>
-		</li>
-
-		<li>
-			<a href="09_404.php" target="_blank">9. 404</a> ✓
+			<a href="09_404.php" target="_blank">404</a> ✓
 		</li>
 
 	</ul>
