--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</li>
 
 		<li>
-			<a href="05_gasholders.php" target="_blank">5. Страница продукции</a>
+			<a href="05_gasholders.php" target="_blank">5. Страница продукции</a> ✓
 		</li>
 
 		<li>
