--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 		</li>
 
 		<li>
-			<a href="05_gasholders.php" target="_blank">5. Страница продукции</a> ✓
+			<a href="05a_agzs.php" target="_blank">5a. Страница продукции - резервуары для АГЗС</a> ✓
+		</li>
+
+		<li>
+			<a href="05b_rez.php" target="_blank">5б. Страница продукции - резервуары отопительные</a> ✓
 		</li>
 
 		<li>
