Обновил блок с примерами работ на остальных страницах

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</li> -->
 
 		<li>
-			<a href="01_main.php" target="_blank">1. Главная страница</a>
+			<a href="01_main.php" target="_blank">1. Главная страница</a> ✓
 		</li>
 
 		<li>
