--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 		</li> -->
 
 		<li>
+			<a href="00_shablon.php" target="_blank">0. Шаблон</a> ✓
+		</li>
+
+		<li>
 			<a href="01_main.php" target="_blank">1. Главная страница</a> ✓
 		</li>
 
